# arbitrage

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: build_test.yml  clippy.yml  rust.yml
bins/inspectah_giving/: Cargo.toml
bins/inspectah_giving/src/: main.rs
bins/uni-v2-2-weth-bot/: Cargo.toml
bins/uni-v2-2-weth-bot/src/: main.rs
bins/uni-v2-3-weth-bot/: Cargo.toml
bins/uni-v2-3-weth-bot/src/: main.rs
contracts/: Cargo.toml
contracts/src/: access_control.rs  access_control_enumerable.rs  address.rs  bundle_executor_test.rs  common_base.rs  console.rs  console_2.rs  context.rs  ds_test.rs  enumerable_set.rs  erc_165.rs  i_access_control.rs  i_access_control_enumerable.rs  i_cro_defi_swap_callee.rs  i_pancake_callee.rs  i_pancake_v_3_swap_callback.rs  i_uniswap_v_2_callee.rs  i_uniswap_v_2_factory.rs  i_uniswap_v_2_pair.rs  i_uniswap_v_3_pool.rs  i_uniswap_v_3_swap_callback.rs  ierc_165.rs  ierc_20.rs  ierc_20_permit.rs  iweth.rs  lib.rs  main.rs  ownable.rs  qv_executor.rs  safe_erc_20.rs  script_base.rs  std_assertions.rs  std_chains.rs  std_cheats.rs  std_cheats_safe.rs  std_error.rs  std_json.rs  std_math.rs  std_storage.rs  std_storage_safe.rs  (+5 more)
contracts/src/json_abi/AccessControl.sol/: AccessControl.json
contracts/src/json_abi/AccessControlEnumerable.sol/: AccessControlEnumerable.json
contracts/src/json_abi/Base.sol/: CommonBase.json  ScriptBase.json  TestBase.json
contracts/src/json_abi/BundleExecutor.sol/: QVExecutor.json
contracts/src/json_abi/Context.sol/: Context.json
contracts/src/json_abi/ERC165.sol/: ERC165.json
contracts/src/json_abi/EnumerableSet.sol/: EnumerableSet.json
contracts/src/json_abi/IAccessControl.sol/: IAccessControl.json
contracts/src/json_abi/ICroDefiSwapCallee.sol/: ICroDefiSwapCallee.json
contracts/src/json_abi/IERC165.sol/: IERC165.json
contracts/src/json_abi/IERC20.sol/: IERC20.json
contracts/src/json_abi/IPancakeV3SwapCallback.sol/: IPancakeV3SwapCallback.json
contracts/src/json_abi/IUniswapV3Pool.sol/: IUniswapV3Pool.json
contracts/src/json_abi/IUniswapV3SwapCallback.sol/: IUniswapV3SwapCallback.json
contracts/src/json_abi/StdChains.sol/: StdChains.json
contracts/src/json_abi/StdJson.sol/: stdJson.json
contracts/src/json_abi/StdMath.sol/: stdMath.json
contracts/src/json_abi/StdStorage.sol/: stdStorage.json
contracts/src/json_abi/Vm.sol/: Vm.json
contracts/src/json_abi/test.sol/: Test.json
crates/bots/uni-v2-2-weth-bot/: Cargo.toml
crates/bots/uni-v2-2-weth-bot-arbitrum/: Cargo.toml  uni_v2_2_weth_arbitrum.service
crates/bots/uni-v2-2-weth-bot-arbitrum/src/: main.rs
crates/bots/uni-v2-2-weth-bot/src/: main.rs
crates/bots/uni-v2-3-weth-bot/: Cargo.toml
crates/bots/uni-v2-3-weth-bot/src/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: access_control.rs  access_control_enumerable.rs  address.rs  bundle_executor_test.rs  console.rs  console_2.rs  ds_test.rs  enumerable_set.rs  erc_165.rs  i_access_control.rs  i_access_control_enumerable.rs  i_cro_defi_swap_callee.rs  i_pancake_callee.rs  i_pancake_v_3_swap_callback.rs  i_quoter_v_2.rs  i_uniswap_v_2_factory.rs  i_uniswap_v_3_pool.rs  ierc_165.rs  ierc_20.rs  ierc_20_permit.rs  iweth.rs  lib.rs  main.rs  ownable.rs  qv_executor.rs  safe_erc_20.rs  std_assertions.rs  std_error.rs  std_json.rs  std_math.rs  std_storage.rs  std_storage_safe.rs  test.rs  uniswap_v_3_quoter.rs  vm.rs  vm_safe.rs
crates/contracts/src/json_abi/Address.sol/: Address.json
crates/contracts/src/json_abi/BundleExecutorTest.sol/: BundleExecutorTest.json
crates/contracts/src/json_abi/IAccessControlEnumerable.sol/: IAccessControlEnumerable.json
crates/contracts/src/json_abi/IERC20Permit.sol/: IERC20Permit.json
crates/contracts/src/json_abi/IPancakeCallee.sol/: IPancakeCallee.json
crates/contracts/src/json_abi/IQuoterV2.sol/: IQuoterV2.json
crates/contracts/src/json_abi/IUniswapV2Callee.sol/: IUniswapV2Callee.json
crates/contracts/src/json_abi/IUniswapV2Factory.sol/: IUniswapV2Factory.json
crates/contracts/src/json_abi/IUniswapV2Pair.sol/: IUniswapV2Pair.json
crates/contracts/src/json_abi/IWETH.sol/: IWETH.json
crates/contracts/src/json_abi/SafeERC20.sol/: SafeERC20.json
crates/contracts/src/json_abi/StdAssertions.sol/: StdAssertions.json
crates/contracts/src/json_abi/StdCheats.sol/: StdCheats.json  StdCheatsSafe.json
crates/contracts/src/json_abi/StdError.sol/: stdError.json
crates/contracts/src/json_abi/StdStorage.sol/: stdStorageSafe.json
crates/contracts/src/json_abi/StdUtils.sol/: StdUtils.json
crates/contracts/src/json_abi/UniswapV3Quoter.sol/: UniswapV3Quoter.json
crates/pools-graph/: Cargo.toml
crates/pools-graph/benches/: amount_out.rs  benchmark.rs  compute_arbitrage.rs
crates/pools-graph/src/: lib.rs  pools_graph.rs
crates/pools-graph/src/arbitrage/: arb_paths.rs  arb_tx.rs  arb_tx_v1.rs  arbs.rs  executor.rs  mod.rs
crates/pools-graph/src/pool_data/: factory.rs  mod.rs  pool_data.rs  uniswap_v2.rs  uniswap_v3.rs  utils.rs
crates/pools-graph/src/pool_data/uniswap_v2/: mod.rs  utils.rs
crates/pools-graph/src/pool_data/uniswap_v3/: UniswapV3Quoter.hex  UniswapV3Quoter.sol  mod.rs  utils.rs
crates/pools-graph/src/utils/: arbitrage.rs  mod.rs  uniswap_v2.rs  uniswap_v3.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  logging.rs  placeholder_middleware.rs  utils.rs
pools-graph/: Cargo.toml
pools-graph/src/: pools_graph.rs
pools-graph/src/pool_data/: mod.rs  pool_data.rs  uniswap_v2.rs  uniswap_v3.rs
pools-graph/src/utils/: arbitrage.rs  mod.rs  uniswap_v2.rs  uniswap_v2_loader.rs  uniswap_v3.rs  uniswap_v3_loader.rs
test/: DebuggingTest.t.sol
uni-v2-2-weth-bot/: Cargo.toml  uni_v2_2_weth.service
uni-v2-2-weth-bot/src/: main.rs
uni-v2-3-weth-bot/: Cargo.toml  DebuggingTest.t.sol  uni_v2_3_weth_bot.service
uni-v2-3-weth-bot/src/: main.rs
uni-v2-3-weth-bot/test/: DebuggingTest.t.sol
uni-v2-bot/: Cargo.toml  uni_v2_2_weth.service
uni-v2-bot/src/: main.rs
utils/: Cargo.toml
utils/src/: env.rs  lib.rs  logging.rs  utils.rs
(+4 files in other folders)
