[workspace]

members = [
    "crates/contracts",
    "crates/pools-graph",
    "bins/uni-v2-3-weth-bot",
    "bins/uni-v2-2-weth-bot",
    "crates/utils"
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
pools-graph = { path = "crates/pools-graph" }
utils = { path = "crates/utils" }
contracts = { path = "crates/contracts" }
ethers = { version = "2.0.14", features = ["ws"] }
log = { version = "0.4.21", features = [] }
once_cell = "1.19.0"
dashmap = "5.5.3"
tokio = { version = "1.37.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
ethers-flashbots = "0.15.0"
rayon = "1.10.0"
criterion = "0.5.1"
