[workspace]

members = [
    "bins/inspectah_giving",
    "crates/contracts",
    "crates/pools-graph",
    "crates/utils"
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
pools-graph = { path = "crates/pools-graph" }
utils = { path = "crates/utils" }
contracts = { path = "crates/contracts" }
ethers = { version = "2.0.14", features = ["ws"] }
log = { version = "0.4.21", features = [] }
once_cell = "1.19.0"
dashmap = "5.5.3"
tokio = { version = "1.38.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
ethers-flashbots = "0.15.0"
rayon = "1.10.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
revm = { version = "10.0.0", features = ["ethersdb", "std"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
async-trait = "0.1.80"
