[package]
name = "pools-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
ethers = "2.0.14"
log = { version = "0.4.21", features = [] }
tokio = "1.37.0"
contracts = { path = "../contracts" }