[package]
name = "pools-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
ethers = "2.0.14"
log = { version = "0.4.21", features = [] }
tokio = "1.37.0"
contracts = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
utils = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
serde = { version = "1.0.198", features = ["derive"] }
reqwest-graphql = "1.0.0"
enum_dispatch = "0.3.13"
eyre = "0.6.12"
serde_json = "1.0.116"
once_cell = "1.19.0"
