[package]
name = "uni-v2-3-weth-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
pools-graph = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
utils = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
contracts = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
ethers = "2.0.14"
rayon = "1.10.0"
eyre = "0.6.12"
serde_json = "1.0.116"
once_cell = "1.19.0"
