[package]
name = "uni-v2-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.14", features = ["ws"] }
log = "0.4.21"
log4rs = "1.3.0"
pools-graph = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
