[package]
name = "uni-v2-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.14", features = ["ws"] }
log = "0.4.21"
log4rs = "1.3.0"
pools-graph = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
contracts = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
utils = { git = "ssh://git@github.com/quentinv72/arbitrage.git" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
rayon = "1.10.0"
ethers-flashbots = "0.15.0"
serde_json = "1.0.116"
eyre = "0.6.12"
