[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.11.0"
ethers = { version = "2.0.14", features = ["ws"] }
ethers-flashbots = "0.15.0"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["json_encoder"] }
url = "2.5.0"
