[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.11.0"
ethers.workspace = true
ethers-flashbots.workspace = true
log.workspace = true
log4rs = { version = "1.3.0", features = ["json_encoder"] }
once_cell.workspace = true
url = "2.5.0"

[dev-dependencies]
criterion.workspace = true