[package]
name = "uni-v2-2-weth-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers.workspace = true
log.workspace = true
contracts.workspace = true
utils.workspace = true
tokio.workspace = true
ethers-flashbots.workspace = true
pools-graph.workspace = true
serde_json = "1.0.116"
rayon.workspace = true